test/typeCheckBadReverseLength.slq

def f(x:ğ”¹^2,const y:ğ”¹)qfree:ğ”¹^2â‡’x;
def main(){
	x:=(H(0:B),);
	y:=H(0:B);
	f(x,y):=x; /// error
	return (x,y);
}
